3 bars no longer shifts when opening menu

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,11 @@
     border-style: none;
 }
 
+.AlignButton {
+    display: flex;
+    flex-direction: row;
+}
+
 .LppLogo {
     height: 20vh;
     object-fit: contain;
